# WebC

./: LICENSE  NOTICE  README.md  pyproject.toml
Documentation/: readme.md
my_tables/: Annual_US_sales_2003_2005.csv  Annual_US_sales_2006_2008.csv  Annual_US_sales_2009_2011.csv  Annual_US_sales_2012_2014.csv  Annual_US_sales_2015_2017.csv  Annual_US_sales_2018_2020.csv  Annual_US_sales_2021_2023.csv  Annual_US_sales_2023_2025.csv  Sales_by_region__2024__6_.csv
porsche_data/: Annual_US_sales_2015_2017.csv  Annual_US_sales_2023_2025.csv  table_2.csv
webc/: __init__.py  demo.py  image_demo.py  pyproject.toml  table.py  web.py  websoc.py
webc.egg-info/: PKG-INFO  SOURCES.txt
webc/webc/: web.py
webc/webc.egg-info/: PKG-INFO  SOURCES.txt
