[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webc"
version = "0.1.1" 
description = "Treat websites as programmable objects (Wikipedia-Locked Beta)"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Ashwin Prasanth"}
]
license = {text = "MIT"}
keywords = ["web", "scraper", "automation", "wikipedia", "resource"]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0"
]

[project.urls]
"Homepage" = "https://github.com/ashtwin2win-Z/WebC"
"Bug Tracker" = "https://github.com/ashtwin2win-Z/WebC/issues"

[tool.setuptools]
packages = ["webc"]
