[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webc"
version = "0.2.0" 
description = "Treat websites as programmable Python objects with specialized social intelligence."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Ashwin Prasanth"}
]
license = {file = "LICENSE"}
keywords = ["web", "scraper", "automation", "social", "metadata"]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search"
]

[project.urls]
"Homepage" = "https://github.com/ashtwin2win-Z/WebC"
"Bug Tracker" = "https://github.com/ashtwin2win-Z/WebC/issues"

[tool.setuptools]
packages = ["webc"]